<resources>
    <!-- TWITTER KEYS-->
    <string name="consumer_key">fRuPxDVC1J58r05jdJIDn7qCJ</string>
    <string name="consumer_secret">pPsf4VkVOFmpIhr3IQXEyqbza7ISIvGRWKjF8W8CsGAEqqt5At</string>

    <!-- Do not use this access token and secret-->
    <string name="access_token">3996686661-RoB1kqYqvyjqsJafS9iPcmv1T5ZEhMsI5DNZ5RV</string>
    <string name="access_token_secret">WbbZehE2gCW2mXN5rnAt4uNAUE6Z2cjLLBS3Q6zv5hSIn</string>

    <!-- MAIN LINK -->
    <string name="main_link">https://api.twitter.com/1.1/</string>

    <!-- TITLES -->
    <string name="app_name">Tweets-Viewer</string>
    <string name="action_authorized_user">Not authorized :(</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit_account">Log out</string>
    <string name="action_search">Search</string>
    <string name="action_new_tweet">New tweet</string>
    <string name="action_refresh_tweet">Refresh tweets list</string>
    <string name="title_activity_new_tweet">New tweet</string>
    <string name="title_activity_view_profile">Profile</string>

    <string name="tweets_list_title">Tweets</string>
    <string name="button_edit_profile_title">Edit profile</string>
    <string name="button_add_user_title">Add user</string>
    <string name="button_add_new_tweet_title">Send new tweet</string>
    <string name="reading_text_title">reading</string>
    <string name="readers_text_title">readers</string>

    <string name="no_internet_connection_title">No Internet connection.
        Please connect to internet and try load tweets again by clicking
    this message&#8230;</string>


    <string name="default_tweet_chars_count">140</string>

    <!-- Dialog Titles-->
    <string name="not_authorized_title">Cannot view profile</string>
    <string name="not_authorized_search_title">Cannot search</string>
    <string name="not_authorized_tweet_title">Cannot send tweet</string>

    <!-- Dialog Messages-->
    <string name="not_authorized_message">User not authorized</string>
    <string name="load_image_error_message">You can load only files less then 700 Kb.</string>
    <string name="error_send_status_dialog_message">Ooops. Something wrong&#8230;</string>


    <!--HINTS-->
    <string name="hint_new_tweet">What do you want to share?</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="hint_edit_profile_name">Name</string>
    <string name="hint_edit_profile_place">Place</string>
    <string name="hint_edit_profile_web_site">Web-site</string>
    <string name="hint_edit_profile_about_myself">About myself</string>
    <string name="hint_edit_profile_image_caption">Photo</string>
    <string name="hint_edit_profile_background_caption">Background</string>
    <string name="hint_edit_search">Search</string>


    <!--RETWEET TITLES-->
    <string name="retweet_dialog_title">Retweet</string>
    <string name="retweet_dialog_message">Do you want to tell about this to your readers?</string>
    <string name="retweet_dialog_quote">Quote</string>
    <string name="retweet_dialog_cancel">Cancel</string>
    <string name="retweet_dialog_retweet">Retweet</string>
    <string name="retweet_dialog_unretweet">Unretweet</string>
    <string name="retweets_title">Retweets</string>
    <string name="favorites_title">Favorites</string>
</resources>
