<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dimka.twitt_reader.MainActivity">

    <item
        android:id="@+id/action_refresh_tweets_list"
        android:orderInCategory="1"
        android:icon="@drawable/ic_autorenew_white_24dp"
        android:title="@string/action_refresh_tweet"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_send_new_tweet"
        android:orderInCategory="1"
        android:icon="@drawable/ic_mail_outline_white_24dp"
        android:title="@string/action_new_tweet"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_profile_view"
        android:orderInCategory="3"
        android:title="@string/action_authorized_user"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="101"
        android:title="@string/action_exit_account"
        android:visible="false"
        app:showAsAction="never"
        />
</menu>
