<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dimka.twitt_reader.EditProfileActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_edit_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/image_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_logo_caption"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/hint_edit_profile_image_caption"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/image_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_background_caption"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10dp"
            android:text="@string/hint_edit_profile_background_caption"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/item_name"
            android:hint="@string/hint_edit_profile_name"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/item_place"
            android:textSize="20sp"
            android:hint="@string/hint_edit_profile_place"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/item_web_site"
            android:textSize="20sp"
            android:hint="@string/hint_edit_profile_web_site"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/item_about"
            android:textSize="20sp"
            android:hint="@string/hint_edit_profile_about_myself"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
